PLAT-113451: Fixed PopupTabLayout tabs area edge spacing and shadow
Enact-DCO-1.0-Signed-off-by: Blake Stephens <blake.stephens@lge.com>

--- a/styles/variables.less
+++ b/styles/variables.less
@@ -258,6 +258,7 @@
 @sand-picker-line-height: 1.5em;
 @sand-non-latin-picker-line-height: @sand-non-latin-body-line-height;
 
+
 // ---------------------------------------
 // Component Rules
 // ---------------------------------------
@@ -700,7 +701,7 @@
 // PopupTabLayout
 // ---------------------------------------
 @sand-popuptablayout-margin: 120px 60px;
-@sand-popuptablayout-tabs-padding: @sand-component-spacing 0;
+@sand-popuptablayout-tabs-padding: @sand-component-spacing 0 (@sand-component-spacing - @sand-tablayout-tab-vertical-margin-bottom) 0;
 @sand-popuptablayout-tabs-content-spacing: 36px;
 @sand-popuptablayout-tabs-content-border-radius: @sand-popup-border-radius;
 @sand-popuptablayout-content-margin: 0;
